<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">双色球工具箱</string>
    <string name="logo"></string>
    <string name="entering_sys">请稍等，正在进入......</string>
    <string name="initialize_sys">请稍等，正在初始化系统</string>
    <string name="copyright">版权所有- 南京千江水网络科技有限公司</string>
    <string name="menu_text1">软件设置</string>

    <!-- 按钮文字 -->
    <string name="OK">确定</string>
    <string name="cancle">取消</string>
    <string name="how_to_play">双色球玩法介绍</string>
    <string name="red_missing_graph">红号遗漏走势图</string>
    <string name="blue_missing_graph">蓝号遗漏走势图</string>
    <string name="contact_author">联系作者</string>

    <!-- 标题 -->
    <string name="custom_title_function_sel_shuangse">双色球工具箱</string>
    <string name="custom_title_function_sel_contact">功能大厅 - 联系作者</string>
    <string name="history_choose_dialog_title">请选择</string>
    <string name="custom_title_sys_enter">进入系统</string>
    <string name="custom_title_experience">中奖经验及使用方法</string>
    <string name="custom_title_experience_detail">中奖经验详细内容</string>
    <string name="custom_title_hit_search">中奖查询</string>
    <string name="custom_title_right_redmissing">红号遗漏走势图</string>
    <string name="custom_title_right_bluemissing">蓝号遗漏走势图</string>
    <string name="custom_title_rules_reminder">软件使用帮助</string>
    <string name="custom_title_expr_share">经验交流</string>
    <string name="custom_title_settings">软件设置</string>
    <string name="ad_tips_text">提示：本软件完全免费，为了支持作者开发出更多、更好的免费功能，请点击广告条以表支持。点击不会收取您的任何费用，谢谢。</string>
    <string name="title_activity_smart_combine">旋转模式组号</string>
    <string name="title_activity_result_smart_combine">旋转组号结果</string>
    <string name="title_activity_result_dantuo_combine">胆拖组号结果</string>
    <string name="custom_title_myhis">组号历史记录</string>
    <string name="custom_title_conditionsearch">条件查询</string>
    <string name="custom_title_myhisdetail">当期详细情况</string>
    <string name="custom_title_recommendhis">软件推荐记录</string>
    <string name="custom_title_dantuo_combine">胆拖组号</string>
    <string name="custom_title_hot_cool_trend">红号冷热走势</string>
    <string name="custom_title_share_my_experience">分享我的中奖经验</string>
    <string name="his_data_detail_title">开奖详细情况</string>

    <!-- 设置 -->
    <string name="shuangse_update_data_title">自动更新数据</string>
    <string name="shuangse_update_data_desc">勾选表示在软件启动的时候会自动联网并更新双色球历史开奖数据，不勾选则在软件启动时不做更新操作（需要手动点击[数据更新]按钮来更新数据）。</string>
    <string name="shuangse_display_red_history_title">红号走势显示期数</string>
    <string name="shuangse_display_red_history_desc">选择双色球红号走势分析时默认的显示期数</string>
    <string name="shuangse_display_blue_history_title">蓝号走势显示期数</string>
    <string name="shuangse_display_blue_history_desc">选择双色球蓝号走势分析时默认的显示期数</string>
    <string name="getout_his_item_title">过滤历史中奖号码</string>
    <string name="getout_his_item_desc">勾选表示在旋转组号时会自动去除掉历史已经中出过的重复的（6个红号完全相同）中奖号码，不勾选则不去除。</string>
    <string name="check_sum_combine_title">检查中奖模式</string>
    <string name="check_sum_combine_desc">勾选表示在旋转组号时会检查所选的红号集合是否符合统计经验中奖模式，不勾选则不检查。</string>

    <!-- version -->
    <string name="default_version_number">1.02</string>
    <string name="title_activity_experience">ExperienceActivity</string>
    <string name="action_settings">Settings</string>
    
    <!-- 帮助和使用说明 -->
    <string name="red_trend_details_text">"在主界面点《红号走势》进入,从上往下看为红号出号历史,\
最近一期排在最下面,默认显示20期,可在《软件设置》->《红号走势显示期数》设置显示更\
多的期数.\n\n从左往右看依次为红号1-33的出号和遗漏值,如果当期该红号出号,则用红色球状\
图形表示当期该红号中出;否则,用灰色数字表示该红号遗漏多少期未中出,这个数字称为:遗漏\
值。\n\n根据历史概率验证,选号时可遵循以下法则选号:\n左右看：上期中出号码的\
左右相邻码可以选3-5个;上期中出的号码也可再选1-2个;而且1-16直接的小号和16-33之间的大号都要\
有;\n上下看：从上往下最近相隔1-4期内的热号可以选3-5个;相隔5-10期的温号可以2-3个;相隔10期\
以上的冷号可选1-2个.\n\n走势图表最下方空白行方格是操作区域,点击该空白方格\
即可选择该红号,再次点击去掉选择;在第二行胆拖组号对应行的空白方格中,点击两次可选为胆\
码(不同色彩显示);\n\n在表格的右下角,拖动到右下角,有《旋转组号》或《胆拖组号》按钮,点击\
即可用该行选好的号码进行组号."</string>
    <string name="blue_trend_details_text">"在主界面点《蓝号走势》进入,从上往下看为蓝号出号历史,\
最近一期排在最下面,默认显示20期,可在《软件设置》->《蓝号走势显示期数》设置显示更\
多的期数.\n\n从左往右看依次为蓝号1-16的出号和遗漏值,紧接其后从左往右分别是当期蓝号的大-小、\
奇-偶、除3余数、区间分布等4项条件值。如果当期该蓝号和对应的条件值出现,则用蓝色球状\
图形表示;否则,用灰色数字表示该蓝号和其条件值遗漏多少期未中出,这个数字称为:遗漏\
值。\n\n根据历史概率验证,选蓝号时要遵循以下法则：\n从上往下看其四个条件值的出现规律,
分别判定是出大,还是出小;出奇还是出偶;判定其除3余0,1或余2;以及判定篮号落入哪个区间.当4个
条件值选定后，篮号也就判定了.\n\n走势图表最下方空白行方格是操作区域,点击该空白方格\
即可选择该蓝号,再次点击去掉选择;在4项条件下，选择对应的条件值后，相应的蓝号就会被计算选出并自
动显示在对应的蓝号下面;\n\n拖动到表格的右下角,有《旋转组号》和《胆拖组号》按钮,点击\
后即可将选好的蓝号传入到对应的组号方式中组号."</string>
    <string name="cond_trend_details_text">"按照条件出值的历史规律，把条件值选好，然后根据条件值过滤"</string>
    <string name="xuanzhuan_zuhao_title">旋转组号及旋转模式使用说明</string>
    <string name="conditions_zuhao_title">条件组号及精选条件使用说明</string>
    <string name="dantuo_zuhao_title">胆拖组号及胆拖模式查询</string>
    <string name="fushi_zuhao_title">复式组号及复式模式查询</string>
    <string name="xuanzhuan_zuhao_details_text">旋转组号及旋转模式使用说明:</string>
    <string name="conditions_zuhao_details_text">条件组号及精选条件使用说明:</string>
    <string name="dantuo_zuhao_details_text">常用的胆拖模式如下：\n\n\
一个红胆：\n\n\
1红胆6红拖==等于6注单式==12元\n\
1红胆7红拖==等于21注单式==42元\n\
1红胆8红拖==等于56注单式==112元\n\
1红胆 9红拖==等于126注单式==252元\n\
1红胆10红拖==等于252注单式==504元\n\
1红胆11红拖==等于462注单式==924元\n\n\
二个红胆：\n\n\
2红胆6红拖==等同于15注单式==30元\n\
2红胆7红拖==等同于35注单式==70元\n\
2红胆8红拖==等同于70注单式==140元\n\
2红胆9红拖==等同于126注单式==252元\n\
2红胆10红拖==等同于210注单式==420元\n\
2红胆11红拖==等同于330注单式==660元\n\
2红胆12红拖==等同于495注单式==990元\n\n\
三个红胆：\n\n\
3红胆4红拖==等同于4注单式==8元\n\
3红胆5红拖==等同于10注单式==20元\n\
3红胆6红拖==等同于20注单式==40元\n\
3红胆7红拖==等同于35注单式==70元\n\
3红胆8红拖==等同于56注单式==112元\n\
3红胆9红拖==等同于84注单式==168元\n\
3红胆10红拖==等同于120注单式==240元\n\
3红胆11红拖==等同于165注单式==330元\n\
3红胆12红拖==等同于220注单式==440元\n\
3红胆13红拖==等同于286注单式==572元\n\
3红胆14红拖==等同于364注单式==728元\n\
3红胆15红拖==等同于455注单式==910元\n\
3红胆16红拖==等同于560注单式==1120元\n\n\
四个红胆：\n\n\
4红胆4红拖==等同于6注单式==12元\n\
4红胆5红拖==等同于10注单式==20元\n\
4红胆6红拖==等同于15注单式==30元\n\
4红胆7红拖==等同于21注单式==42元\n\
4红胆8红拖==等同于28注单式==56元\n\
4红胆9红拖==等同于36注单式==72元\n\
4红胆10红拖==等同于45注单式==90元\n\
4红胆11红拖==等同于55注单式==110元\n\
4红胆12红拖==等同于66注单式==132元\n\
4红胆13红拖==等同于78注单式==156元\n\
4红胆14红拖==等同于91注单式==182元\n\
4红胆15红拖==等同于105注单式==210元\n\
4红胆16红拖==等同于120注单式==240元\n\
4红胆17红拖==等同于136注单式==272元\n\
4红胆18红拖==等同于153注单式==306元\n\
4红胆19红拖==等同于171注单式==342元\n\
4红胆20红拖==等同于190注单式==380元\n\n\
五个红胆：\n\n\
5红胆6红拖==等同于6注单式==12元\n\
5红胆7红拖==等同于7注单式==14元\n\
5红胆8红拖==等同于8注单式==16元\n\
5红胆9红拖==等同于9注单式==18元\n\
5红胆10红拖==等同于10注单式==20元\n\
5红胆11红拖==等同于11注单式==22元\n\
5红胆12红拖==等同于12注单式==24元\n\
5红胆13红拖==等同于13注单式==26元\n\
5红胆14红拖==等同于14注单式==28元\n\
5红胆15红拖==等同于15注单式==30元\n\
5红胆16红拖==等同于16注单式==32元\n\
5红胆17红拖==等同于17注单式==34元\n\
5红胆18红拖==等同于18注单式==36元\n\
5红胆19红拖==等同于19注单式==38元\n\
5红胆20红拖==等同于20注单式==40元\n\n注：选定胆码很困难，选定3个或以上的红号胆码是极难的。\n\n</string>
    <string name="fushi_zuhao_details_text">红号复式允许选择7个到20个红号，常用的红号复式查询表如下：\n\n\
7码复式7注需14元\n\
8码复式28注需56元\n\
9码复式84注需168元\n\
10码复式210注需420元\n\
11码复式462注需924元\n\
12码复式924注需1848元\n\
13码复式1716注需3432元\n\
14码复式3003注需6006元\n\
15码复式5005注需10010元\n\
16码复式8008注需16016元\n\
17码复式12376注需24752元\n\
18码复式18564注需37128元\n\
19码复式27132注需54264元\n\
20码复式38760注需77520元\n\n</string>
    <string name="detail_description_common">详细说明</string>
    <string name="detail_description_select_num">选号方法详细说明</string>
    <string name="detail_description_zu_hao">组号方法详细说明</string>
    <string name = "redTrend">如何根据红号走势图选号</string>
    <string name = "blueTrend">如何根据蓝号走势图选号</string>
    <string name = "condTrend">如何根据条件走势图选号</string>
    <string name="software_intro_title">软件用法说明</string>
    <string name = "software_intro">软件简介</string>
    <string name = "shuangse_intro">双色球玩法规则</string>
    <string name = "xuanzhuan_intro">什么是旋转组号法</string>
    <string name = "dantuo_intro">什么是胆拖组号法</string>
    <string name = "cond_intro">什么是条件组号法</string>
    <string name = "software_intro_text">\n《彩票工具箱》为广大彩民朋友提供玩彩所需的号码走势图、旋转组\
号工具、、买彩记录保存、各类条件查询等工具，立志打造彩民社区最受欢迎彩票工具。\n\n本软件研发过程中，我\
们研究了国内外数字彩票领域专业书籍、最新科研成果，本着《科学玩彩、理性玩彩、技术玩彩》的理念，基于美国彩票大师《绝对不\
要随机选号》的建议，本软件引入了《全球最新旋转模式》组号工具和《精心选择的条件组》等选号方法为彩民朋友提供最好的技术玩彩工具，\
帮助实现中大奖的梦想。\n\n本软件的使用方法十分简单，可以概括为两步：\n\n第一步、查看号码走势图或条件走势图，选择号码或条件值;\n\n第二步、选\
择《组号方法》并选择《旋转模式》组号，保存结果或购买。\n\n第一步详情请参见【用法说\
明】里【选号】一栏, 第二步详情请参见【用法说明】里【组号】一栏。\n\n组合号码后，点击《保存》到《个人记录》中，方便购买、查询和回\
顾。\n\n双色球玩法规则和常见组号方\
法的介绍请参见【用法说明】里【简介】一栏。\n\n中奖规则和奖金额度请参见【用法说明】里【中奖】一栏。\n\n免责声明：\n\n【本软件限成年人使用，\
软件提供辅助玩彩工具，由此引起的后果本软件概不负责。】\n\n【版权所有：南京千江水网络科技有限公司】</string>

    <string name = "shuangse_intro_text">1. 双色球【单注号码】包含：6个红号和1个蓝号两部分, 红号从1至33中任选6个不重复数字（不要求排列顺序），蓝号\
从1至16中任选一个数字，二者放在一起组合为一注号码进行投注，双色球每注2元。\n\n2. 双色球有四种投注方法：\n\n【单式投注】：一次购买一组\
或多组分别由6个红号和1个蓝号组成的号码，本软件【旋转组号】组合出来的号码即为单式投注号码;\n\n【倍式投注】：简称倍投，即将同一组号码在同一期购买多次，若中奖后\
奖金也相应翻倍;\n\n【复式投注】：从1-33中选择7至20个不重复的红号(无顺序要求), 从1-16中选择1到多个蓝号, 组合起来投注; 如8个红号复式需56元，10个红号复式\
需420元，购买16个红号需1万6千多元。复式投注是全组合购买，投资较大，易造成不必要浪费。\n\n【旋转组号】可解决复式投注的问题，保证一定的中奖概率前提下，将多个\
红号码旋转组号为少量单式号\
码进行购买 ，可以大大减少投注所需资金，详见【什么是旋转组号法】;\n\n【胆拖投注】：针对红号，选择认为必出的红号作为【胆码】，\
选择认为可能出现的红号做为【托码】，二者组合进行投注，详见【什么是胆拖组号法】；\n\n3. 双色球全部红号组合数为：1107568组，算上蓝号共有1107568 x 16 = 17721088\
注组合，数量巨大；\n\n4. 双色球每周二，四，日晚21：30开奖,销售截止时间为开奖当天晚20：00点。</string>
    <string name = "xuanzhuan_intro_text">【旋转组号】是美国彩票大师盖尔.霍华德发明的\
投注方法, 是目前全球数字彩票界最科学，尖端的彩票玩法。旋转组号基\
于现代组合数学覆盖计算理论，利用并行计算机搜索出最优化的组号模式 - 即【旋转模式】。\n\n旋\
转组号相比复式购买方法可以【用最少的钱达到几乎相等\
的中奖概率】。举例说明如下：\n\n比如某期，经过查看走势图，选择并看好10个红号，想复式购买此10个红号需420元钱，考虑彩票投资风险，如果这10个号码中奖的概率\
不是100%的话，会浪费这420元钱，那有没有什么办法能不降低这10个号码的中奖概率，又能大大减少投资资金呢？\n\n【旋转组号】就可以解决这个问题：购买10个红号，用旋转组\
号《中6保5模式》组合出来14注单式号码，只需28元钱，且使用《中6保5模式》，如果开奖后这10个红号包括了当期开奖的6个号码，购买此14注单式号码可以确保你有一注击中\
当期含有5个奖号的奖项，而且在确保击中5个号码奖项的同时，有很大概率让你击中6红奖项，而这些只需28元，相比复式420元投资，可以\
大大减少资金投资，长期买彩可以减少浪费，同时击中大奖。\n\n
又如某期经过查看走势图，选择并看好16个红号，如果全部复式购买此16个红号，需16016元，\
使用旋转《中6保5模式》组合此16个红号，只需购买112注共224元就可以在开奖后如果该16个红号包括当期开奖的6红，确保你买中当期中5个红号的奖项；如果用《中6保4模式》对这16个红号旋转组号，只需\
购买25注50元就可以在开奖后如果该16个红号包括当期开奖的6红，确保你买中当期中4个红号的奖项。\n\n旋转组号的威力在于节省资金，确保先中小奖回收资金，长期投注博取大奖，而这恰恰是博彩大师\
推荐的投资彩票的最佳方法 。\n\n本软件包含了Iliya Bluskow博士2010年发表的\
全球最新超级计算机计算出的旋转组号模式，供彩友使用。各种《旋转模式》的使用说明详见【用法说明】里【组号】栏目下的【旋转组号及模式说明】里的详细说明。</string>
    <string name = "dantuo_intro_text">从1-33中选1至5个红号作为必出【胆码】, 从剩余的红号中再选1-20个红号作为【拖码】, 组合起来\
投注。 \n\n比如某期看好红号6, 11, 26必出, 选为3个【胆码】, 然后从剩下的红号中看好2, 7, 12, 25, 31五个红号作为【拖码】, 组合\
为6, 11, 26 + 2, 7, 12, 15, 31的3胆5拖投注，此3胆5拖组合相当于10注单式号码，投注时，可以用本软件提供的胆拖组号工具组号后选取认为可能性较大的单式购买\
也可以直接以胆拖方式投注。\n\n常见的胆拖投注方法有1到5红胆号拖6到20个拖号，胆拖模式及投资所需资金请查看本软件帮助中【用法说明】里【组号】栏目下的【胆拖组号及模式说明】\n\n胆拖购买法要求【胆码】必需准确，否则全盘皆失。</string>
    <string name = "cond_intro_text">条件组号：条件值组号或称为条件选号法，它是技术派玩彩常用的手段。\n\n它的基本思路是：针对每一注开奖号码\
比如2014082期2，4，20，25，26，29 + 11的开奖数字，分析该注号码6个红号的各个条件属性，比如统计6个红号中有几个连在一起的数字？称为《连号个数》条件；\
又比如统计6个红号相加之一起的和值是多少？称为《红号和值》条件；又比如统计这6个红号中有几个偶数？称为《偶数个数》条件等等。统计出这注号码各种条件的值后，并基于历史条件值的出现规律推断下一期的\
条件出值。\n\n比如以此2014082期为例，红号《连号个数》条件值为1、《红号和值》条件值为106、《偶数个数》条件值为4、《大数(1-16)个数》条件值为4、《一分区数字(1-11)个\
数》条件值为2、《二分区数字(12-22)个数》条件值为1、《三分区数字(23-33)个数》条件值为3，等等都是常见的条件；在购买2014082期彩票时，只要将这几个条件值选对，利用软件计算就可以\
将所有红号组合（共1107568注）中符合此条件的号码全部计算出来并购买，如果条件值全部选对，当期中奖号码必然会被选中。经过多年的发展，彩民们发明了许多\
种条件，比如《AC值》、《尾数个数》等等，只要将这些条件值选对，利用软件过滤计算，就可以将对应符合条件的号码组计算出来。\n\n本软件精选了经过\
计算机数理统计所得的七个最精简条件，并给出了这些条件值的历史走势图，只要将这七个条件值选对，利用《条件组号》即可过\
滤出对应的号码组来。</string>

    <string name="XuanZhuanCombine">用【旋转组号】组合所选号码</string>
    <string name="DanTuoCombine">用【胆拖组号】组合所选号码</string>
    <string name="ConditionsCombine">用【条件选号】过滤所选号码</string>
    <string name="SELFSELECTIONBLUE">用蓝号走势图选蓝</string>
    <string name="RECOMMENDBLUEOP">软件推荐蓝码</string>
    
    <string name="SELFSELECTIONRED1">红号走势图选红</string>
    <string name="SELFSELECTIONRED2">冷热走势图选红</string>
    <string name="RECOMMENDREDMODELHOTWARM">软件推荐红号</string>
    <string name="RECOMMEND6FOR456">软件推荐6红</string>
    <string name="RECOMMEND11FOR56">软件推荐11红</string>
    <string name="RECOMMEND17FOR6">软件推荐17红</string>
    <string name="USEMYKEEPRED">使用我的守号</string>
    
    <!-- 其他 -->
    <string name ="click_return">点击返回</string>
    <string name ="help_info">帮助信息</string>
    <string name ="querying_usercounter_fail">查询失败，请检查网络.</string>

</resources>